data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_896.wast
;; 7. **Function Returning within Loop Affecting Later Calls**:    - Description: Create a loop where a function called within the loop returns a value that affects subsequent calls within the same loop iteration.    - Constraint: Validate that returned values are handled and do not cause erroneous function calls in the same loop iteration.    - Relation: Improper management of returned values can disrupt the control flow and subsequent function calls in the loop.

(assert_invalid
  (module (func $func_return_within_loop
    (loop (result i32) 
      (call $func_that_returns)
      (i32.const 1)
      (i32.add))
    (call $func_that_returns)))
  "type mismatch"
)